# Backfill-engine

./: .env.example  .gitignore  Makefile  README.md  RUN.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: benchmarks.md  incidents.md  schema-eras.md
docs/decisions/: 001-partition-granularity.md  002-no-spark.md  003-runner-vs-dagster.md  004-isolation-strategy.md  005-atomic-swap.md  006-compute-engine.md
pipelines/: __init__.py  backfill.py  hot_path.py
quality/contracts/: .gitkeep
quality/tests/: .gitkeep
scripts/: .gitkeep  chaos_kill.py  discover_schema_eras.py  reconcile.py
src/backfill/: __init__.py  config.py  reference.py
src/backfill/ledger/: __init__.py  models.py  repository.py
src/backfill/ledger/migrations/: .gitkeep  001_create_ledger.sql
src/backfill/observability/: __init__.py  cost.py  metrics.py
src/backfill/parsers/: __init__.py  base.py  era_2012_2014.py  era_modern.py  registry.py
src/backfill/reconciliation/: __init__.py  checksums.py  report.py
src/backfill/runner/: __init__.py  worker.py
src/backfill/sinks/: __init__.py  compaction.py
src/backfill/sources/: __init__.py  gharchive.py
tests/chaos/: .gitkeep  test_resume.py
tests/integration/: .gitkeep
tests/unit/: test_checksum.py  test_config.py  test_parser_routing.py
