[project]
name = "backfill-hell"
version = "0.1.0"
description = "Idempotent, resumable backfill engine for GitHub Archive, with reconciliation proofs"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "psycopg[binary]>=3.2",
    "minio>=7.2",
    "duckdb>=1.1",   # compute engine — chosen in ADR 006 (SQL-first, out-of-core)
]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "ruff>=0.5",
    "pytest>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backfill"]

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]
files = ["src", "pipelines", "tests"]

[[tool.mypy.overrides]]
module = ["duckdb"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
